# FleetingFiles

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  start_env.bat
FleetingFiles/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
FleetingFiles/settings/: base.py  local.py  production.py
FleetingFiles/static/css/: homeStyle.css  style1.css
FleetingFiles/templates/: home.html
room/: admin.py  forms.py  models.py  urls.py  views.py
room/migrations/: 0001_initial.py  0002_file_name.py  0003_remove_file_name_alter_file_file.py
room/static/css/: prestyle.css  style.css
room/templates/: create_room.html  join_room.html  room.html  uploader.html
